# jupyter-databricks-kernel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  flake.nix  mise.toml  pyproject.toml  renovate.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  publish.yaml  release.yaml
docs/: README.md  architecture.md  constraints.md  roadmap.md  serverless-execution-backend.md  setup.md  usage.md  use-cases.md
examples/: README.md
examples/table-exporter/: .ruff.toml  README.md  launcher.ipynb  main.py  pyproject.toml  run_export.py
examples/table-exporter/common/: params.py  validator.py
examples/table-exporter/processors/: exporter.py
src/jupyter_databricks_kernel/: config.py  executor.py  kernel.py  runner.py  sync.py
tests/: conftest.py  test_config.py  test_examples_table_exporter.py  test_executor.py  test_integration.py  test_kernel.py  test_placeholder.py  test_runner.py  test_sync.py
tests/fixtures/: hello.py  sample.ipynb
